--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -5,7 +5,7 @@
 /*For the new Material Design for YouTube*/
 /*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
-/*1.8.9*/
+/*1.9.0*/
 
 	/*Main color variables*/
 	:root
@@ -114,65 +114,66 @@
 	/*DARK theme variables*/
 	:not([style-scope]):not(.style-scope) 
 	{
-		--yt-primary-color: hsla(0, 100%, 100%, .88) !important;
+		--yt-primary-color: var(--main-text) !important;
 		--yt-primary-text-color: var(--main-text) !important;
-		--yt-hovered-text-color: hsla(0, 100%, 100%, .74) !important;
-		--yt-secondary-text-color: hsla(0, 100%, 100%, .5) !important;
-		--yt-disabled-text-color: hsla(0, 100%, 100%, .26) !important;
+		--yt-hovered-text-color: var(--dimer-text) !important;
+		--yt-secondary-text-color: var(--dimer-text) !important;
+		--yt-disabled-text-color: var(--hover-background) !important;
 		--yt-placeholder-text-color: var(--dimer-text) !important;
 		--yt-border-color: var(--hover-background) !important;
 		--yt-searchbox-border-color: var(--main-background) !important;
 		--yt-searchbox-legacy-border-color: var(--main-background) !important;
-		--yt-searchbox-legacy-border-shadow-color: hsla(0, 0%, 0%, 0) !important;
+		--yt-searchbox-legacy-border-shadow-color: var(--second-background) !important;
 		--yt-searchbox-legacy-button-color: var(--hover-background) !important;
 		--yt-searchbox-legacy-button-border-color: var(--main-background) !important;
-		--yt-searchbox-legacy-button-focus-color: hsla(0, 0%, 100%, .08) !important;
+		--yt-searchbox-legacy-button-focus-color: var(--second-background) !important;
 		--yt-searchbox-legacy-button-hover-color: var(--hover-background) !important;
 		--yt-searchbox-legacy-button-hover-border-color: var(--main-background) !important;
-		--yt-searchbox-legacy-button-icon-color: hsla(0, 100%, 100%, .5) !important;
-		--yt-commentbox-border-inactive: hsla(0, 100%, 100%, .5) !important;
-		--yt-commentbox-border-active: hsla(0, 100%, 100%, .88) !important;
-		--yt-paper-button-ink-color: hsla(0, 0%, 100%, .2) !important;
-		--yt-icon-color: hsla(0, 100%, 100%, .5) !important;
+		--yt-searchbox-legacy-button-icon-color: var(--dimer-text) !important;
+		--yt-commentbox-border-inactive: var(--dimer-text) !important;
+		--yt-commentbox-border-active: var(--main-text) !important;
+		--yt-paper-button-ink-color: var(--hover-background) !important;
+		--yt-button-color: var(--dimer-text) !important;
+		--yt-icon-color: var(--dimer-text) !important;
 		--yt-icon-hover-color: var(--main-color) !important;
 		--yt-icon-active-color: var(--main-color) !important;
-		--yt-icon-disabled-color: hsla(0, 100%, 100%, .26) !important;
-		--yt-endpoint-color: hsl(0, 0%, 53.3%) !important;
-		--yt-expand-color: hsla(0, 0%, 100%, .6) !important;
+		--yt-icon-disabled-color: var(--hover-background) !important;
+		--yt-endpoint-color: var(--hover-background) !important;
+		--yt-expand-color: var(--dimer-text) !important;
 		--yt-metadata-color: var(--dimer-text) !important;
-		--yt-channel-owner: hsla(0, 100%, 100%, .88) !important;
-		--yt-autoplay-toggle: hsl(0, 0%, 93.3%) !important;
-		--yt-playlist-background-header: hsla(0, 0%, 53.3%, .4) !important;
-		--yt-playlist-background-item: hsla(0, 0%, 53.3%, .2) !important;
-		--yt-playlist-title-text: hsla(0, 100%, 100%, .88) !important;
-		--yt-playlist-message-text: hsl(0, 0%, 93.3%) !important;
-		--yt-subscribe-button-text-color: hsla(0, 100%, 100%, .88) !important;
-		--yt-brand-color: hsla(0, 100%, 100%, .88) !important;
-		--yt-button-text-color: hsla(0, 100%, 100%, .5) !important;
-		--yt-button-payment-text-color: hsla(0, 100%, 100%, .88) !important;
-		--yt-video-publish-date-color: hsla(0, 0%, 100%, .6) !important;
-		--yt-vat-notice-text: hsla(0, 0%, 100%, .6) !important;
-		--yt-copyright-text: hsla(0, 0%, 100%, .6) !important;
+		--yt-channel-owner: var(--main-text) !important;
+		--yt-autoplay-toggle: var(--main-text) !important;
+		--yt-playlist-background-header: var(--hover-background) !important;
+		--yt-playlist-background-item: var(--second-background) !important;
+		--yt-playlist-title-text: var(--main-text) !important;
+		--yt-playlist-message-text: var(--main-text) !important;
+		--yt-subscribe-button-text-color: var(--main-text) !important;
+		--yt-brand-color: var(--main-text) !important;
+		--yt-button-text-color: var(--dimer-text) !important;
+		--yt-button-payment-text-color: var(--main-text) !important;
+		--yt-video-publish-date-color: var(--dimer-text) !important;
+		--yt-vat-notice-text: var(--dimer-text) !important;
+		--yt-copyright-text: var(--dimer-text) !important;
 		--yt-guide-entry-hover-background-color: var(--hover-background) !important;
 		--yt-survey-button-color: var(--yt-primary-text-color) !important;
-		--yt-thumbnail-placeholder-color: hsl(0, 0%, 16%) !important;
-		--yt-transcript-cue-hover-background-color: hsla(0, 0%, 53.3%, .4) !important;
-		--yt-transcript-toolbar-background-color: hsla(0, 0%, 53.3%, .4) !important;
-		--yt-transcript-toolbar-text: hsla(0, 100%, 100%, .88) !important;
-		--yt-primary-disabled-button-text-color: hsla(0, 0%, 100%, .2) !important;
-		--yt-badge-background: hsla(0, 0%, 100%, .4) !important;
-		--yt-badge-disabled-color: hsla(0, 0%, 100%, .4) !important;
-		--yt-collection-badge-color: hsla(0, 0%, 100%, .8) !important;
-		--yt-owner-badge-color: hsla(0, 0%, 100%, .4) !important;
-		--yt-simple-badge-color: hsla(0, 0%, 100%, .6) !important;
-		--yt-ad-badge-text-color: hsl(0, 0%, 7%) !important;
+		--yt-thumbnail-placeholder-color: var(--second-background) !important;
+		--yt-transcript-cue-hover-background-color: var(--hover-background) !important;
+		--yt-transcript-toolbar-background-color: var(--hover-background) !important;
+		--yt-transcript-toolbar-text: var(--main-text) !important;
+		--yt-primary-disabled-button-text-color: var(--hover-background) !important;
+		--yt-badge-background: var(--hover-background) !important;
+		--yt-badge-disabled-color: var(--hover-background) !important;
+		--yt-collection-badge-color: var(--dimer-text) !important;
+		--yt-owner-badge-color: var(--hover-background) !important;
+		--yt-simple-badge-color: var(--dimer-text) !important;
+		--yt-ad-badge-text-color: var(--main-background) !important;
 		--paper-menu-background-color: var(--second-background) !important;
 		--paper-menu-color: var(--main-text) !important;
 		--primary-text-color: var(--main-text) !important;
 		--yt-simple-menu-header-background: var(--second-background) !important;
-		--yt-item-section-header-color: hsl(0, 0%, 93.3%) !important;
-		--yt-menu-hover-backgound-color: hsla(0, 100%, 100%, .08) !important;
-		--yt-menu-focus-background-color: hsla(0, 100%, 100%, .26) !important;
+		--yt-item-section-header-color: var(--main-text) !important;
+		--yt-menu-hover-backgound-color: var(--second-background) !important;
+		--yt-menu-focus-background-color: var(--hover-background) !important;
 		--yt-app-background: var(--main-background) !important;
 		--yt-main-app-background: var(--main-background) !important;
 		--yt-main-app-background-tmp: var(--main-background) !important;
@@ -181,159 +182,38 @@
 		--yt-searchbox-background: var(--main-background) !important;
 		--yt-channel-header-background:  var(--second-background) !important;
 		--yt-playlist-sidebar-background: var(--second-background) !important;
-		--yt-transcript-background: hsl(0, 0%, 11%) !important;
-		--yt-watch-card-secondary-text-color: hsl(0, 0%, 93.3%) !important;
-		--yt-watch-card-album-header-background: hsl(0, 0%, 6.7%) !important;
-		--yt-comment-text-color: hsla(0, 100%, 100%, .88) !important;
-		--yt-comment-metadata-text-color: hsl(0, 0%, 53.3%) !important;
-		--yt-moderation-panel-background: hsla(0, 0%, 11%, .8) !important;
-		--yt-moderation-panel-hover: hsl(0, 0%, 11%) !important;
-		--yt-moderation-panel-comment-text: hsla(0, 100%, 100%, .5) !important;
-		--yt-moderation-panel-comment-metadata-text: hsla(0, 100%, 100%, .5) !important;
-		--yt-moderation-icon-color: hsla(0, 100%, 100%, .5) !important;
-		--yt-moderation-icon-hover-color: hsla(0, 100%, 100%, .74) !important;
-		--yt-backstage-metadata-text-color: hsla(0, 100%, 100%, .88) !important;
-		--yt-backstage-video-link-background-color: hsl(0, 0%, 14%) !important;
-		--yt-backstage-image-alert-color: hsla(0, 100%, 100%, .88) !important;
-		--yt-shopping-product-info: hsla(0, 100%, 100%, .74) !important;
-		--yt-live-chat-action-panel-background-color: #282828 !important;
-		--yt-live-chat-action-panel-background-color-transparent: rgba(40, 40, 40, .8) !important;
-		--yt-live-chat-primary-text-color: hsl(0, 0%, 100%) !important;
-		--yt-live-chat-secondary-text-color: rgba(255, 255, 255, 0.7) !important;
-		--yt-live-chat-tertiary-text-color: rgba(255, 255, 255, 0.54) !important;
-		--yt-swatch-primary-darker: rgb(32,32,32) !important;
+		--yt-transcript-background: var(--second-background) !important;
+		--yt-watch-card-secondary-text-color: var(--main-text) !important;
+		--yt-watch-card-album-header-background: var(--main-background) !important;
+		--yt-comment-text-color: var(--main-text) !important;
+		--yt-comment-metadata-text-color: var(--hover-background) !important;
+		--yt-moderation-panel-background: var(--second-background) !important;
+		--yt-moderation-panel-hover: var(--second-background) !important;
+		--yt-moderation-panel-comment-text: var(--dimer-text) !important;
+		--yt-moderation-panel-comment-metadata-text: var(--dimer-text) !important;
+		--yt-moderation-icon-color: var(--dimer-text) !important;
+		--yt-moderation-icon-hover-color: var(--dimer-text) !important;
+		--yt-backstage-metadata-text-color: var(--main-text) !important;
+		--yt-backstage-video-link-background-color: var(--second-background) !important;
+		--yt-backstage-image-alert-color: var(--main-text) !important;
+		--yt-shopping-product-info: var(--dimer-text) !important;
+		--yt-live-chat-action-panel-background-color: var(--second-background) !important;
+		--yt-live-chat-action-panel-background-color-transparent: var(--second-background) !important;
+		--yt-live-chat-primary-text-color: var(--main-text) !important;
+		--yt-live-chat-secondary-text-color: var(--dimer-text) !important;
+		--yt-live-chat-tertiary-text-color: var(--hover-background) !important;
+		--yt-swatch-primary-darker: var(--hover-background) !important;
 		--yt-swatch-primary: var(--second-background) !important;
-		--yt-swatch-text: rgb(255,255,255) !important;
-		--yt-swatch-input-text: rgba(255,255,255,1) !important;
-		--yt-swatch-textbox-bg: rgba(19,19,19,1) !important;
-		--yt-swatch-icon-color: rgba(136,136,136,1) !important;
-		--yt-swatch-important-text: rgb(255,255,255) !important;
-		--yt-swatch-logo-override: rgb(255,255,255) !important;
+		--yt-swatch-text: var(--main-text) !important;
+		--yt-swatch-input-text: var(--main-text) !important;
+		--yt-swatch-textbox-bg: var(--main-background) !important;
+		--yt-swatch-icon-color: var(--hover-background) !important;
+		--yt-swatch-important-text: var(--main-text) !important;
+		--yt-swatch-logo-override: var(--main-text) !important;
 		--yt-lightsource-section1-color: var(--yt-channel-header-background) !important;
 		--yt-lightsource-primary-title-color: var(--yt-primary-text-color) !important;
 		--yt-lightsource-secondary-title-color: var(--yt-metadata-color) !important;
 		--paper-tabs-selection-bar-color: var(--yt-lightsource-secondary-title-color) !important;
-		--paper-toggle-button-checked-button-color: rgb(255,255,255) !important;
-		--paper-toggle-button-unchecked-bar-color: var(--dimer-text) !important;
-		--paper-radio-button-checked-color: var(--main-color) !important;
-		--yt-disabled-text-color: var(--dimer-text) !important;
-		--yt-disabled-paper-button-color: var(--yt-disabled-text-color);
-		--yt-brand-paper-button-color: var(--main-color) !important;
-		--yt-paper-radio-button-checked-color: var(--dimer-text) !important;
-		--yt-toggle-color: var(--main-color) !important;
-		--yt-formatted-string-deemphasize-color: var(--dimer-text) !important;
-		--yt-moderation-panel-likely-spam-divider: var(--hover-background) !important;
-		--yt-backstage-cancel-background-color: var(--main-text) !important;
-		--yt-backstage-cancel-color: var(--main-text) !important;
-		--yt-offer-background-color: var(--dimer-text) !important;
-
-	}
-	
-	/*If you would like a light theme uncomment this code, comment the code above and use the YouTube light (comment user, uncomment youtube light colors)*/
-	/*LIGHT theme variables*/
-	/*
-	:not([style-scope]):not(.style-scope) 
-	{
-		--yt-primary-color: hsl(0, 0%, 6.7%) !important;
-		--yt-primary-text-color: var(--main-text) !important;
-		--yt-hovered-text-color: hsla(0, 0%, 6.7%, .8) !important;
-		--yt-secondary-text-color: hsla(0, 0%, 6.7%, .8) !important;
-		--yt-disabled-text-color: hsla(0, 0%, 6.7%, 0.3) !important;
-		--yt-placeholder-text-color: var(--dimer-text) !important;
-		--yt-border-color: var(--hover-background) !important;
-		--yt-searchbox-border-color: var(--main-background) !important;
-		--yt-searchbox-legacy-border-color: var(--main-background) !important;
-		--yt-searchbox-legacy-border-shadow-color: #eee !important;
-		--yt-searchbox-legacy-button-color: var(--hover-background) !important;
-		--yt-searchbox-legacy-button-border-color: var(--main-background) !important;
-		--yt-searchbox-legacy-button-focus-color: #e9e9e9 !important;
-		--yt-searchbox-legacy-button-hover-color: var(--hover-background) !important;
-		--yt-searchbox-legacy-button-hover-border-color: var(--main-background) !important;
-		--yt-searchbox-legacy-button-icon-color: #333 !important;
-		--yt-commentbox-border-inactive: hsl(0, 0%, 93.3%) !important;
-		--yt-commentbox-border-active: hsla(0, 0%, 6.7%, .6) !important;
-		--yt-primary-disabled-button-text-color: hsl(0, 0%, 100%) !important;
-		--yt-disabled-paper-button-color: var(--yt-disabled-text-color) !important;
-		--yt-brand-paper-button-color: hsl(3, 81.8%, 49.6%) !important;
-		--yt-paper-radio-button-checked-color: hsl(0, 0%, 53.3%) !important;
-		--yt-paper-button-ink-color: hsl(0, 0%, 53.3%) !important;
-		--yt-icon-color: hsla(0, 0%, 6.7%, .4) !important;
-		--yt-icon-hover-color: var(--main-color) !important;
-		--yt-icon-active-color: var(--main-color) !important;
-		--yt-icon-disabled-color: hsla(0, 0%, 6.7%, .6) !important;
-		--yt-expand-color: hsla(0, 0%, 6.7%, .6) !important;
-		--yt-metadata-color: var(--dimer-text) !important;
-		--yt-toggle-color: hsl(206.1, 79.3%, 52.7%) !important;
-		--yt-playlist-background-header: hsl(0, 0%, 93.3%) !important;
-		--yt-playlist-background-item: hsla(0, 0%, 93.3%, .6) !important;
-		--yt-playlist-title-text: hsl(0, 0%, 6.7%) !important;
-		--yt-playlist-message-text: hsla(0, 0%, 6.7%, .6) !important;
-		--yt-subscribe-button-text-color: hsl(0, 0%, 100%) !important;
-		--yt-brand-color: hsl(3, 81.8%, 49.6%) !important;
-		--yt-button-text-color: hsla(0, 0%, 6.7%, .6) !important;
-		--yt-button-payment-text-color: hsl(0, 0%, 100%) !important;
-		--yt-video-publish-date-color: hsla(0, 0%, 6.7%, .6) !important;
-		--yt-vat-notice-text: hsla(0, 0%, 6.7%, .6) !important;
-		--yt-copyright-text: hsla(0, 0%, 6.7%, .6) !important;
-		--yt-guide-entry-hover-background-color: var(--hover-background) !important;
-		--yt-survey-button-color: var(--yt-primary-text-color) !important;
-		--yt-thumbnail-placeholder-color: hsl(0, 0%, 89%) !important;
-		--yt-transcript-cue-hover-background-color: hsl(0, 0%, 93.3%) !important;
-		--yt-transcript-toolbar-background-color: hsl(0, 0%, 93.3%) !important;
-		--yt-transcript-toolbar-text: hsl(0, 0%, 6.7%) !important;
-		--yt-badge-background: hsla(0, 0%, 93.3%, .6) !important;
-		--yt-badge-disabled-color: hsla(0, 0%, 53.3%, .4) !important;
-		--yt-collection-badge-color: hsla(0, 0%, 6.7%, .8) !important;
-		--yt-owner-badge-color: hsla(0, 0%, 6.7%, .4) !important;
-		--yt-simple-badge-color: hsla(0, 0%, 6.7%, .6) !important;
-		--yt-ad-badge-text-color: hsl(0, 0%, 100%) !important;
-		--paper-menu-background-color: var(--second-background) !important;
-		--paper-menu-color: var(--main-text) !important;
-		--primary-text-color: var(--main-text) !important;
-		--yt-simple-menu-header-background: var(--second-background) !important;
-		--yt-item-section-header-color: hsla(0, 0%, 6.7%, .6) !important;
-		--yt-menu-hover-backgound-color: hsl(0, 0%, 93.3%) !important;
-		--yt-menu-focus-background-color: hsla(0, 0%, 6.7%, .2) !important;
-		--yt-app-background: var(--main-background) !important;
-		--yt-main-app-background: var(--main-background) !important;
-		--yt-main-app-background-tmp: var(--main-background) !important;
-		--yt-guide-background: var(--second-background) !important;
-		--yt-dialog-background: var(--second-background) !important;
-		--yt-searchbox-background: var(--main-background) !important;
-		--yt-channel-header-background:  var(--second-background) !important;
-		--yt-playlist-sidebar-background: var(--second-background) !important;
-		--yt-transcript-background: hsl(0, 0%, 100%) !important;
-		--yt-watch-card-secondary-text-color: hsl(0, 0%, 53.3%) !important;
-		--yt-watch-card-album-header-background: hsl(0, 0%, 100%) !important;
-		--yt-comment-text-color: hsl(0, 0%, 6.7%) !important;
-		--yt-comment-metadata-text-color: hsl(0, 0%, 53.3%) !important;
-		--yt-moderation-panel-background: hsla(0, 0%, 93.3%, .6) !important;
-		--yt-moderation-panel-hover: hsla(0, 0%, 93.3%, .8) !important;
-		--yt-moderation-panel-comment-text: hsl(0, 0%, 6.7%) !important;
-		--yt-moderation-panel-comment-metadata-text: hsla(0, 0%, 6.7%, .6) !important;
-		--yt-moderation-icon-color: hsla(0, 0%, 6.7%, .6) !important;
-		--yt-moderation-icon-hover-color: hsl(0, 0%, 6.7%) !important;
-		--yt-moderation-panel-likely-spam-divider: hsla(0, 0%, 53.3%, .1) !important;
-		--yt-backstage-metadata-text-color: hsl(0, 0%, 53.3%) !important;
-		--yt-backstage-video-link-background-color: hsla(0, 0%, 93.3%, .4) !important;
-		--yt-backstage-image-alert-color: hsla(0, 0%, 6.7%, .6) !important;
-		--yt-shopping-product-info: hsla(0, 0%, 6.7%, .8) !important;
-		--yt-lightsource-section1-color: var(--yt-channel-header-background) !important;
-		--yt-lightsource-primary-title-color: var(--yt-primary-text-color) !important;
-		--yt-lightsource-secondary-title-color: var(--yt-metadata-color) !important;
-		--paper-tabs-selection-bar-color: var(--yt-lightsource-secondary-title-color) !important;
-		--paper-toggle-button-checked-button-color: black !important;
-		--paper-toggle-button-unchecked-bar-color: var(--dimer-text) !important;
-		--paper-radio-button-checked-color: var(--main-color) !important;
-		--yt-swatch-primary: var(--second-background) !important;
-		--yt-swatch-text: rgb(136, 136, 136) !important;
-		--yt-swatch-input-text: rgba(136, 136, 136,1) !important;
-		--yt-swatch-textbox-bg: rgba(19,19,19,1) !important;
-		--yt-swatch-icon-color: rgba(136,136,136,1) !important;
-		--yt-swatch-important-text: rgb(136, 136, 136) !important;
-		--yt-swatch-logo-override: rgb(136, 136, 136) !important;
-		--yt-lightsource-section1-color: var(--yt-channel-header-background) !important;
-		--yt-lightsource-primary-title-color: var(--yt-primary-text-color) !important;
 		--paper-toggle-button-checked-button-color: var(--main-text) !important;
 		--paper-toggle-button-unchecked-bar-color: var(--dimer-text) !important;
 		--paper-radio-button-checked-color: var(--main-color) !important;
@@ -347,9 +227,9 @@
 		--yt-moderation-panel-likely-spam-divider: var(--hover-background) !important;
 		--yt-backstage-cancel-background-color: var(--main-text) !important;
 		--yt-backstage-cancel-color: var(--main-text) !important;
-		--yt-offer-background-color: var(--dimer-text) !important;
-  }
-	*/
+		--yt-offer-background-color: var(--hover-background) !important;
+	}
+	
 	
 	/*Background for the entire page*/
 	html
